bk_ida/gccida/c0/output_18
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_18/src/insn-output.c:514:24: error: use of undeclared identifier 'unk_87EC4B'
return ( const char *)&unk_87EC4B; 
                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_18/src/obj/insn-output.o] Error 1
